Use HashSet instead of Set